[package]
name = "chunker_benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.*"
clap = { version = "4.2.*", features = ["derive"] }
criterion = "0.4.*"
fastcdc = "3.1.0"
futures = "0.3.*"
plotters = "0.3.4"
rand = { version = "0.8.*", features = ["small_rng"] }
zerocopy = { version = "0.7.*" }

[[bench]]
name = "chunker_benches"
harness = false